Fix: Blog styles bleeding into Nav Bar and Homepage styles. Add List image assets
_base.scss
  Differentiate between Site h1-h6 tags and Blog h1-h6 tags

_nav.scss
  Fix font sizes

_variables.scss
  Add seperate variables for blog and nav font settings

blockquote.gif
list-star.gif
  Added remote assets for list items to local repo

--- a/_sass/partials/_base.scss
+++ b/_sass/partials/_base.scss
@@ -110,10 +110,23 @@ li {
 /**
  * Headings
  */
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 700;
-}
+ h1,
+ h2,
+ h3,
+ h4,
+ h5,
+ h6 {
+   font-weight: 400;
+ }
 
+ .blog-wrapper h1,
+ .blog-wrapper h2,
+ .blog-wrapper h3,
+ .blog-wrapper h4,
+ .blog-wrapper h5,
+ .blog-wrapper h6 {
+   font-weight: 700;
+ }
 
 /**
  * Links
