--- a/_sass/partials/_post-footer.scss
+++ b/_sass/partials/_post-footer.scss
@@ -50,7 +50,7 @@
    display: block;
    margin: 5px 0 0;
    padding: 0 0 0 17px;
-   background: url(/wp-content/themes/pub/vigilance/images/list-star.gif) no-repeat 0 .3em;
+   background: url('/assets/images/list-star.gif') no-repeat 0 .3em;
  }
 
  .sd-social-icon .sd-content ul li a.sd-button,
@@ -174,7 +174,7 @@
    display: block;
    margin: 5px 0 0;
    padding: 0 0 0 17px;
-   background: url(/wp-content/themes/pub/vigilance/images/list-star.gif) no-repeat 0 .3em;
+   background: url('/assets/images/list-star.gif') no-repeat 0 .3em;
  }
 
 
