--- a/_sass/partials/_sidebar.scss
+++ b/_sass/partials/_sidebar.scss
@@ -1,11 +1,10 @@
-.sidebar {
+.sidebar,
+.body-archive .sidebar {
   display: block;
-  padding: 0 0 20px;
-  width: 300px;
-
-  display: flex;
-  justify-content: center;
-  width: auto;
+  justify-content: flex-start;
+  margin: 0 auto;
+  padding: 0 20px 20px;
+  width: 90%;
 
   li {
     font-size: 14px;
@@ -110,7 +109,7 @@ form#search_form {
   padding: 0;
 
   li a {
-    background: url('https://s2.wp.com/wp-content/themes/pub/vigilance/images/list-item.gif') no-repeat 0 6px;
+    background: url('assets/images/list-item.gif') no-repeat 0 6px;
     display: block;
     padding: 0 0 0 15px;
   }
