--- a/_sass/partials/_variables.scss
+++ b/_sass/partials/_variables.scss
@@ -1,9 +1,13 @@
 // Define defaults for each variable.
 
 // $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-$base-font-family: Georgia,"Times New Roman", Times, Serif;
-$base-font-size:   13px !default;
+$base-font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+$base-font-size:   16px !default;
 $base-font-weight: 400 !default;
+$heading-font-weight: 400;
+
+$blog-font-family: Georgia,"Times New Roman", Times, Serif;
+$blog--base-font-size: 13px !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 // $base-line-height: 1.5 !default;
 $base-line-height: 1.42857143 !default;
@@ -41,6 +45,8 @@ $base-border:      $blue-2;
 $blog--link-color: $maroon;
 
 $header--background-color: $blue-light;
+$nav-font: "Helvetica Neue",Helvetica,Arial,sans-serif;
+$nav-font-size: 16px !default;
 $nav--text-color:  $blue;
 $nav--background-color: $blue-light;
 $nav--border-color: $blue-light-2;
